# app/Http/Controllers/AuthController.php
@@ -12,6 +12,32 @@ class AuthController extends Controller
 {
     use HttpResponses;
 
+    /**
+     * @OA\Post(
+     *     path="/api/login",
+     *     summary="Attempt user login by providing email and password. Bearer token is returned.",
+     *     @OA\RequestBody(
+     *         @OA\MediaType(
+     *             mediaType="application/json",
+     *             @OA\Schema(
+     *                 @OA\Property(
+     *                     property="email",
+     *                     type="string"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="password",
+     *                     type="string"
+     *                 ),
+     *                 example={"email": "johndoe@contoso.com", "password": "contoso123"}
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="OK"
+     *     )
+     * )
+     */
     public function login(LoginUserRequest $request)
     {
         $request->validated($request->all());
@@ -28,6 +54,16 @@ class AuthController extends Controller
         ]);
     }
 
+    /**
+     * @OA\Get(
+     *     path="/api/me",
+     *     summary="View details of current signed in user.",
+     *     @OA\Response(
+     *         response=200,
+     *         description="OK"
+     *     )
+     * )
+     */
     public function me(Request $request)
     {
         return $this->success($request->user());
